--- a/style.css
+++ b/style.css
@@ -80,6 +80,18 @@ input{
     cursor: pointer;
 }
 
+textarea {
+    border: none;
+    overflow: auto;
+    outline: none;
+
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+
+    resize: none; /*remove the resize handle on the bottom right*/
+}
+
 @media (min-width:801px){
     h1{
         font-size: 40px;
